Revision history for Perl extension Error::Show.

v0.3.0 2023-05-09
  [new features]
  - calling context sub with an explicit single undef value (ie
    Error::Show::context undef) internally captures a stack trace/frame stack
    which is used for generating context. Aids in debugging when you just want
    to know how the context a subrotine was called in a non error state.


  [improvments]

  - Reduced memory usage for inprogram use. The IPC::Open3 and Symbol modules
    are not loaded unless they are actually required
  - context subroutine is now callable via -> notation if prefered
  - the context subrotine symbol in now exported by defualt (when called from
    code). Previous behaviour can be achieved by explicitly importing the empty
    list
  - Removed unused importing/exporter code
 
  [fixes]
  - Fixed type in synopsis example

  [pod]
  - Documented changes to importing
  - Documented internal frame capture

  [tests]
  - added simple test for internal frame capture

v0.2.1 2023-03-10
  [fixes]
  - Stack trace arrays are now copied to prevent unwanted action at a distance
    and fix incorrect line numbers when multiple calls to context are performed
    on the stacke frames
  - Reverse option when using stack frames was not operating as documented. Now
    fixed
  [tests]
  - Added additional reverse test


v0.2.0 
  [new features]
  - added limit option to limit number of errors processed
  - added reverse option to reverse sequence of outputs
  - added 'advanced' eval/string program processing. Gives source code
    processing options to isolate context generation to a range of lines
    within a string program.
     * start_mark   
     * end_mark
     * start_offset
     * end_offset

  [fixes]
  - Removed unused code
  - Line numbering more consistent internally

  [pod]
  - Example for 'advanced string eval'
  - Fix typos and spelling


v0.1.1  2023-01-22
  [tests]
  - fixed failing frame test on perl 5.26/5.24
  
  [pod]