@@ -80,7 +80,7 @@ SYNOPSIS
       # No argument uses $@ as error
       #
       eval { exceptional_code };
-      say STDERR Error::Show::context if $@;
+      say STDERR context if $@;
 
 
       # or a single exception argument of your choosing
@@ -90,7 +90,7 @@ SYNOPSIS
         exceptional_code
       }
       catch($e) {
-        say STDERR Error::Show $e;
+        say STDERR context $e;
       }
 
       # Show context down a stack
@@ -101,7 +101,7 @@ SYNOPSIS
 
       }
       catch($e){
-        say STDERR Error::Show message=>$e, frames=>$e->frames
+        say STDERR context message=>$e, frames=>$e->frames
       }
 
 DESCRIPTION
@@ -130,11 +130,11 @@ DESCRIPTION
     lines of code to print before and after the error line, indenting of
     stack trace context, etc.
 
-    From v0.2.0, added 'advanced string eval' support has been added for
-    better context reporting of dynamically generated code.
+    From v0.3.0: "context" subroutine is now exported by default. To prevent
+    this, import with an empty list, ie "use Error::Show ()".
 
-    No symbols are exported and as such they must be accessed via the
-    package name.
+    "From v0.2.0:", Added 'advanced string eval' support has been added for
+    better context reporting of dynamically generated code.
 
 USAGE
   Command Line Usage (Syntax check and run)
@@ -190,6 +190,11 @@ USAGE
       my $context=Error::Show::context $error;              (2)
       my $context=Error::Show::context option_pairs, message=>$error_as_string, frames=>$stack frames (3)
 
+      my $context=Error::Show::context undef;               (4)
+      my $context=context undef;                            (5)
+
+      my $context=Error::Show->context(...);                (6)
+
     Takes an error string, or exception object and extracts the code
     surrounding the source of the error. The code lines are prefixed with
     line numbers and the error line marked with a fat arrow.
@@ -215,6 +220,17 @@ USAGE
     This is stringified for processing.
 
     In the third for (3), all options are provided as key value pairs.
+
+    From v0.3.0: In the forth form (4), an explicit single argument of
+    "undef", will generate call stack/frames internally and generate context
+    information from it.
+
+    The "context" subroutine (5) is exported by default, so does not need a
+    fully qualified name
+
+    "context" Can also be called with package arrow notation (6) ie
+    "Error::Show->context(...)" if prefered, with the same arguemtn handling
+    as the other forms.
 
     The expected types of data are as follows:
 
